...
    <string name="age_placeholder">Select Age</string>
    <string name="gender_title">Biological Gender</string>
    <string name="gender_placeholder">Select Gender</string>
    <!-- localization -->
    <string name="intro_button_text">Get Started</string>
    <string name="eligibility_intro_button_text">Check Eligibility</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="complete">Complete</string>
    <string name="submit">Submit</string>
    <string name="continuous">Continue</string>
    <string name="join_study">Join Study</string>
    <string name="start_task">Start task</string>
</resources>

