...
        horizontalArrangement = Arrangement.SpaceBetween
    ) {
        RoundTextBoxWithIcon(
            value = date?.toString() ?: "",
            modifier = Modifier
                .weight(1F)
                .testTag("datePicker"),
            placeholder = "Date",
            icon = Icons.Default.CalendarMonth
        ) {
            datePickerDialog.show()
        }
        Spacer(Modifier.width(8.dp))
        if (question.isTime) {
            RoundTextBoxWithIcon(
                value = time?.toString() ?: "",
                modifier = Modifier
                    .weight(1F)
                    .testTag("timePicker"),
                placeholder = "Time",
            ) {
                timePickerDialog.show()
            }
        }
    }
...
