...
            var response by remember { mutableStateOf(model.getResponse()) }

            InputTextField(
                response,
                Modifier
                    .fillMaxWidth(1f)
                    .testTag("TextQuestionInputField")
            ) {
                response = it
                model.input = it
            }
        }
    }
...
