...
private fun modifier(state: ReorderableLazyListState) = Modifier
    // TODO calculate height size
    .height(100.dp)
    .reorderable(state)
    .detectReorderAfterLongPress(state)
    .background(AppTheme.colors.background)
    .testTag("ranking")

